# note-converter

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  Note.cpp  main.cpp
src/include/: Note.h
tests/: CMakeLists.txt  test_file.cpp
